# surf-cli

./: .gitignore  INSTRUCTIONS.md  LICENSE  README.md  pyproject.toml  setup-ci.sh
.github-template/workflows/: ci.yml
src/surf_cli/: __init__.py  __main__.py  client.py  config.py  exceptions.py  formatting.py  main.py  models.py  output.py  state.py
src/surf_cli/api/: catalog.py  co.py  storage.py  wallets.py  workspaces.py
src/surf_cli/commands/: __init__.py  catalog.py  co.py  storage.py  wallets.py  workspaces.py
tests/: conftest.py  test_catalog.py  test_client.py  test_co.py  test_completion.py  test_config.py  test_exceptions.py  test_formatting.py  test_main.py  test_storage.py  test_wallets.py  test_workspaces.py
