[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "surf-cli"
version = "0.1.0"
description = "CLI for interacting with surfresearchcloud.nl"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "surf-cli contributors" }
]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13",
    "pydantic>=2",
]

[project.scripts]
surf = "surf_cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/surf_cli"]

[tool.ruff]
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
